--- a/EdgeDetectionForColorImage/src/CMakeLists.txt
+++ b/EdgeDetectionForColorImage/src/CMakeLists.txt
@@ -4,6 +4,8 @@ project(ColorEdgeDetection)
 find_package(OpenCV REQUIRED)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "/Users/kenta/ClionProjects/ColorEdgeDetection/bin")
+
 set(SOURCE_FILES main.cpp)
 add_executable(ColorEdgeDetection ${SOURCE_FILES} ColorEdge.cpp ColorEdge.h)
 target_link_libraries(ColorEdgeDetection ${OpenCV_LIBS})
